# polymarket_updown_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_REPORT.md  POLYMARKET_BTC_UPDOWN_STATE_BOT_TASK.md  README.md  backtest-reference-compare.md  docker-compose.yml  live-code-direction-audit.md  package-lock.json  pyproject.toml
config/: btc_updown_state_rules_15m.json  rule_whitelist.example.json  rule_whitelist.json
docs/analysis/: 2026-06-15-entry-mode-sensitivity.md  2026-06-15-postfix-comparison.md  2026-06-15-reconciliation.md  2026-06-15-safety-buffer-008-test.md  2026-06-15-vol-mean-investigation.md  2026-06-15-walk-forward.md
scripts/: breakeven_analysis.py  build_state_rules.py  check_bot_health.py  entry_mode_backtest.py  evaluate_rule_performance.py  export_paper_trades.py  fetch_binance_history.py  inspect_paper_trade.py  investigate_vol_mean.py  investigation_report.py  paper_report.py  reconcile_live_vs_backtest.py  reconciliation_report.py  run_polymarket_round_paper.py  walk_forward_backtest.py  walk_forward_report.py  watch_bot_health.py
tests/: conftest.py  test_binance_client.py  test_candle_features.py  test_current_expected_slug.py  test_evaluate_rule_performance.py  test_healthcheck.py  test_paper_broker.py  test_polymarket_discovery.py  test_probability_rules.py  test_reporting.py  test_risk_manager.py  test_round_state.py  test_rule_whitelist.py  test_runner.py  test_settlement.py  test_signal_engine.py  test_storage.py  test_telegram_alerts.py  test_telegram_reports.py  test_url_parser.py
(+43 files in other folders)
